# SecFi-Prime-Platform-

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  dev.yaml  prod.yaml  risk_limits.yaml
docs/: algorithms.md  architecture.md  assumptions_and_limitations.md  data_model.md  governance.md  implementation_plan.md  model_risk.md  module_specs.md  reporting_design.md  risk_framework.md  runbook.md  testing_validation.md
docs/sample_outputs/: daily_executive_summary_2026-06-18.md
examples/: example_daily_run.py
infra/docker/: Dockerfile  docker-compose.yml
scripts/: run_daily_batch.py  run_intraday_cycle.py
sql/procedures/: sp_age_open_items.sql
sql/schemas/: 01_reference_data.sql  02_counterparty.sql  03_positions_book.sql  04_pricing_market_data.sql  05_recon.sql  06_corporate_actions.sql  07_capital_rwa.sql  08_audit_log.sql
sql/views/: v_book_summary.sql  v_counterparty_exposure_rollup.sql
src/secfi_platform/: __init__.py
tests/: _helpers.py
tests/fixtures/: corporate_actions.csv  counterparties.csv  custodian_positions.csv  fx_rates.csv  locate_shortages.csv  market_rates_datalend.csv  market_rates_equilend.csv  positions.csv  securities.csv  settlement_fails.csv
tests/integration/: test_full_cycle.py
tests/unit/: test_book_optimizer.py  test_ca_impact_engine.py  test_capital_rwa.py  test_counterparty_risk.py  test_explainability.py  test_growth_engine.py  test_new_capability_modules.py  test_normalization.py  test_pricing_intelligence.py  test_rates_fx.py  test_recall_risk_engine.py  test_recon_engine.py
(+46 files in other folders)
